[package]
name = "reme"
version = "0.1.0"
edition = "2021"
authors = ["Kirill <fidelicura> Bezuglyi"]

[dependencies]
# logging
log = "0.4"
simple_logger = "4"
# serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# notifications
notify-rust = "4"
# specification
xdg = "2"
# time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
