[package]
name = "reme"
version = "1.0.0"
edition = "2021"
authors = ["Kirill <fidelicura> Bezuglyi", "contributors"]
description = "Event reminder for Linux!"

[dependencies]
# logging
log = "0.4"
env_logger = "0.11"
# serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# notifications
notify-rust = "4"
# specification
xdg = "2"
# time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
